--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-audio-voice-recorder": "^1.1.0",
     "react-dev-utils": "^12.0.1",
+    "react-player": "^2.12.0",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.11.1",
     "resolve": "^1.20.0",
